# api-consume-lo-nacional-mock-data

./: .gitignore  Dockerfile  README.md  database.sql  docker-compose.yml  main.py  pyproject.toml  requirements.txt  swagger.yaml
app/: database.py  models.py
app/config/: settings.py
app/db/: connection.py
app/db/schemas/: auth.py  models.py
app/repository/: blog_repository.py  forum_repository.py  product_repository.py  request_repository.py  resource_repository.py  user_repository.py
app/routers/: blogs.py  forums.py  products.py  requests.py  users.py
app/services/: auth_service.py  logger_service.py  password_service.py
